--- a/src/index.html
+++ b/src/index.html
@@ -286,7 +286,7 @@
                                         50%
                                     </div>   
                                     <div class="overlay">
-                                        <button class="btn btn-secondary custom-btn ">
+                                        <button class="btn btn-secondary custom-btn add-to-cart-btn">
                                             اضافة للعربة
                                             <i class="fas fa-cart-plus"></i>
                                         </button>
